Fix TypeScript types and Next.js build configuration
- Remove global.d.ts type declarations, use actual package types
- Fix permission parameter types with any for flexibility
- Fix bundler transport to use http() wrapper
- Fix publicClient type with any for sendUserOperationWithDelegation
- Update tsconfig.json to remove custom typeRoots
- Fix next.config.ts for webpack build compatibility
- Remove output: export to fix pages-manifest.json error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,11 +26,7 @@
       "@/*": [
         "./*"
       ]
-    },
-    "typeRoots": [
-      "./node_modules/@types",
-      "./types"
-    ]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -38,8 +34,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts",
-    "types/**/*.d.ts"
+    "**/*.mts"
   ],
   "exclude": [
     "node_modules"
